--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -181,6 +181,9 @@
 <!ENTITY Ctr_bookbar		"Lesezeichenleiste">
 <!ENTITY Ctr_notoolbar		"Versteckt (keine Menüeinträge anzeigen)">
 
+<!ENTITY Ctr_mbarforceleft	"Erstes Element">
+<!ENTITY Ctr_mbarforceright	"Letztes Element">
+
 <!ENTITY Ctr_toolbars		"Leisten">
 <!ENTITY Ctr_dblclnewtab	"Doppelklick öffnet einen neuen Tab (und beachtet 'browser.newtab.url')">
 <!ENTITY Ctr_hidetbwot		"Verstecke Tableiste mit nur einem sichtbaren Tab">
