--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -181,6 +181,9 @@
 <!ENTITY Ctr_bookbar		"Εργαλειοθήκη σελιδοδεικτών">
 <!ENTITY Ctr_notoolbar		"Απόκρυψη (μη εμφάνιση των στοιχείων μενού)">
 
+<!ENTITY Ctr_mbarforceleft	"First element">
+<!ENTITY Ctr_mbarforceright	"Last element">
+
 <!ENTITY Ctr_toolbars		"Εργαλειοθήκες">
 <!ENTITY Ctr_dblclnewtab	"Άνοιγμα νέας καρτέλας με διπλό κλικ (χρήση browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Απόκρυψη εργαλειοθήκης καρτελών με μία ορατή καρτέλα">
