--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -114,7 +114,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Mostrar iconos y texto">
 <!ENTITY Ctr_nav_txt_ico3	"Mostrar sólo texto">
 <!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
-<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
+<!ENTITY Ctr_iat_notf_vt	"Exclude vertical toolbars">
 <!ENTITY Ctr_cpanelmenus	"Menús de panel: vista compacta (marcadores, historial, etc.)">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_alt_newtabp	"New tab page: alternative appearance">
@@ -180,6 +180,9 @@
 <!ENTITY Ctr_navbar			"Barra de navegación">
 <!ENTITY Ctr_bookbar		"Barra de marcadores">
 <!ENTITY Ctr_notoolbar		"Hidden (do not show menu items)">
+
+<!ENTITY Ctr_mbarforceleft	"First element">
+<!ENTITY Ctr_mbarforceright	"Last element">
 
 <!ENTITY Ctr_toolbars		"Configuraciones de barra de herramientas">
 <!ENTITY Ctr_dblclnewtab	"El doble clic abre una 'nueva' pestaña (usando browser.newtab.url)">
