--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -181,6 +181,9 @@
 <!ENTITY Ctr_bookbar		"Pasek zakładek">
 <!ENTITY Ctr_notoolbar		"Brak paska narzędzi">
 
+<!ENTITY Ctr_mbarforceleft	"Pierwszy element">
+<!ENTITY Ctr_mbarforceright	"Ostatni element">
+
 <!ENTITY Ctr_toolbars		"Ustawienia paska narzędzi">
 <!ENTITY Ctr_dblclnewtab	"Podwójne kliknięcie otwiera 'nową' kartę (używa browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Ukryj pasek kart z jedną kartą">
