--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -114,7 +114,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Exibir os ícones e o texto">
 <!ENTITY Ctr_nav_txt_ico3	"Exibir só o texto">
 <!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
-<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
+<!ENTITY Ctr_iat_notf_vt	"Exclude vertical toolbars">
 <!ENTITY Ctr_cpanelmenus	"Menus do painel compacto (favoritos, histórico, etc.)">
 <!ENTITY Ctr_hidezoomres	"Controles de ampliação na barra de ferramentas: ocultar o botão redefinir ampliação">
 <!ENTITY Ctr_alt_newtabp	"New tab page: alternative appearance">
@@ -180,6 +180,9 @@
 <!ENTITY Ctr_navbar			"Barra de navegação">
 <!ENTITY Ctr_bookbar		"Barra de favoritos">
 <!ENTITY Ctr_notoolbar		"Hidden (do not show menu items)">
+
+<!ENTITY Ctr_mbarforceleft	"First element">
+<!ENTITY Ctr_mbarforceright	"Last element">
 
 <!ENTITY Ctr_toolbars		"Barras de Ferramentas">
 <!ENTITY Ctr_dblclnewtab	"Clicar duas vezes para abrir a 'nova' guia (usando navegador.novaguia.url)">
