--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -114,7 +114,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Показывать значки и текст">
 <!ENTITY Ctr_nav_txt_ico3	"Показывать только текст">
 <!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
-<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
+<!ENTITY Ctr_iat_notf_vt	"Exclude vertical toolbars">
 <!ENTITY Ctr_cpanelmenus	"Компактная панель меню (закладки, история и т. д.)">
 <!ENTITY Ctr_hidezoomres	"Кнопки масштаба: скрыть сброс масштабирования">
 <!ENTITY Ctr_alt_newtabp	"New tab page: alternative appearance">
@@ -180,6 +180,9 @@
 <!ENTITY Ctr_navbar			"Панель навигации">
 <!ENTITY Ctr_bookbar		"Панель закладок">
 <!ENTITY Ctr_notoolbar		"Hidden (do not show menu items)">
+
+<!ENTITY Ctr_mbarforceleft	"First element">
+<!ENTITY Ctr_mbarforceright	"Last element">
 
 <!ENTITY Ctr_toolbars		"Панели">
 <!ENTITY Ctr_dblclnewtab	"Двойной клик открывает новую вкладку">
